--- a/playShow.yaml
+++ b/playShow.yaml
@@ -6,6 +6,7 @@
 
 
     #----------------------------------- A adapter ----------------------------------------
+  vars:
 
     DIR_RESULT:  /tmp # à adapter
 
